# adjust-rs

./: Cargo.toml  README.md
crates/adjust_macro/: Cargo.toml
crates/adjust_macro/src/: lib.rs
examples/microservice/: Cargo.toml  README.md
examples/microservice/src/: main.rs
examples/microservice/src/controller/: test.rs
examples/microservice/src/models/: hi.rs  mod.rs
examples/microservice/src/service/: test.rs
src/: connection.rs  controller.rs  environment.rs  lib.rs  prelude.rs  response.rs  server.rs  service.rs
src/database/: mod.rs  postgres.rs  redis.rs
src/database/util/: mod.rs
src/server/: mod.rs
