[package]
name = "adjust"
authors = ["smokingplaya"]
description = "Utility library for making serivces on axum easier"
license = "	AGPL-3.0-or-later"
keywords = ["axum", "diesel", "redis", "utils"]
repository = "https://github.com/riverfallmc/adjust-rs"
version = "0.1.23"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
adjust_macro = "0.1.0"
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "r2d2"]

[dependencies.redis]
version = "0.28.1"
features = ["r2d2"]

[dependencies.axum]
version = "0.8.1"
features = ["macros"]
