[package]
name = "adjust"
authors = ["smokingplaya"]
description = "Utility library for making serivces on axum easier"
license = "AGPL-3.0-or-later"
keywords = ["axum", "diesel", "redis", "utils"]
repository = "https://github.com/smokingplaya/adjust-rs"
version = "0.1.33"
edition = "2021"

[dependencies]
adjust_macro = "0.1.2"
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-cookie = { version = "0.2.3", optional = true }
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
redis = { version = "0.28.1", features = ["r2d2"], optional = true }

[features]
default = []
json = ["dep:serde_json"]
redis = ["dep:redis"]
cookie = ["dep:axum-cookie"]