[package]
name = "microservice"
im-a-teapot = true
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
adjust = { path = "../../" }
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.axum]
version = "0.8.1"
features = ["multipart"]
